2009-05-28  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	More robust with the wrong values of the points, display error messages.

2009-05-28  kitone  <kitone@gna.org>

	* src/gui/automaticspellchecker.cc:
	* src/gui/automaticspellchecker.h:
	Don't split a word with apostrophe.

2009-05-25  kitone  <kitone@gna.org>

	* src/gui/automaticspellchecker.cc:
	Change icon 'goto-bottom' to 'remove'.

2009-05-25  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Add debug msg.

2009-05-23  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	Add a SpellChecker capability to any TextViewCell.

2009-05-23  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files automaticspellchecker.h and automaticspellchecker.cc.

	* src/gui/automaticspellchecker.cc:
	* src/gui/automaticspellchecker.h:
	Introduce a new class AutomaticSpellChecker.

2009-05-23  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files spellchecker.h and spellchecker.cc.

	* src/spellchecker.cc:
	* src/spellchecker.h:
	Introduce a new class SpellChecker inside the libsubtitleeditor.

2009-05-16  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.glade:
	* plugins/actions/preferences/interfacepage.h:
	* src/defaultcfg.cc:
	* src/subtitleview.cc:
	Fix: bug #2341 : Add option to don't disable the actions during editing.

2009-05-16  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Fix: 'play/pause' doesn't work after 'play selection'.

2009-05-13  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/patternmanager.cc:
	* plugins/actions/textcorrection/patternmanager.h:
	Maintain order of patterns with the same name.

2009-05-12  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/Latn-fi.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn-fr.common-error.se-pattern.in:
	Update with policy value.

2009-05-12  kitone  <kitone@gna.org>
